k8s-manifests/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # --- HTTPS 리디렉션 및 인증서 설정 ---
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:514883192355:certificate/f3093065-c635-4a0c-882e-416f5a4dea97
    
    # --- 헬스 체크 및 백엔드 프로토콜 설정 수정 ---
    # ALB가 ArgoCD 서버와 HTTP로 통신하도록 변경합니다.
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/success-codes: '200,307'
spec:
  ingressClassName: alb
  rules:
    - host: argocd.onthe-top.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  # backend-protocol이 HTTP이므로, HTTP 포트(80)를 사용합니다.
                  number: 443

 # ⬇️ 이 부분을 추가합니다.
  syncPolicy:
    automated:
      # prune: Git에서 삭제된 리소스를 클러스터에서도 자동으로 삭제합니다.
      prune: true
      # selfHeal: 클러스터의 상태가 Git과 다를 경우, 자동으로 Git의 상태로 복구합니다.
      selfHeal: true
